Explicitly export jdk.vm.ci.code to jdk.internal.vm.compiler
Allows mandrel builds to run on openJDK 11u without
http://hg.openjdk.java.net/jdk/jdk/rev/2d012a75d35c#l24.15